// Zcash Lightwalletd gRPC Protocol
// Based on: https://github.com/zcash/lightwalletd/blob/master/walletrpc/service.proto

syntax = "proto3";
package cash.z.wallet.sdk.rpc;

option go_package = "walletrpc";

// A BlockID message contains identifiers to select a block: a height or a hash.
message BlockID {
    uint64 height = 1;
    bytes hash = 2;
}

// BlockRange specifies a series of blocks from start to end inclusive.
message BlockRange {
    BlockID start = 1;
    BlockID end = 2;
}

// A TxFilter contains the information needed to identify a particular transaction
message TxFilter {
    BlockID block = 1;
    uint64 index = 2;
    bytes hash = 3;
}

// RawTransaction contains the complete transaction data.
message RawTransaction {
    bytes data = 1;
    uint64 height = 2;
}

// SendResponse contains the result of a send operation.
message SendResponse {
    int32 errorCode = 1;
    string errorMessage = 2;
}

// ChainSpec is a placeholder
message ChainSpec {}

// Empty is for gRPC calls that don't return anything
message Empty {}

// LightdInfo returns information about the lightwalletd instance
message LightdInfo {
    string version = 1;
    string vendor = 2;
    bool taddrSupport = 3;
    string chainName = 4;
    uint64 saplingActivationHeight = 5;
    string consensusBranchId = 6;
    uint64 blockHeight = 7;
    string gitCommit = 8;
    string branch = 9;
    string buildDate = 10;
    string buildUser = 11;
    uint64 estimatedHeight = 12;
    string zcashdBuild = 13;
    string zcashdSubversion = 14;
}

// TransparentAddressBlockFilter restricts the results to the given address
message TransparentAddressBlockFilter {
    string address = 1;
    BlockRange range = 2;
}

// GetAddressUtxosArg is used to get UTXOs for a transparent address
message GetAddressUtxosArg {
    repeated string addresses = 1;
    uint64 startHeight = 2;
    uint32 maxEntries = 3;
}

// GetAddressUtxosReply contains UTXO information
message GetAddressUtxosReply {
    string address = 1;
    bytes txid = 2;
    int32 index = 3;
    bytes script = 4;
    int64 valueZat = 5;
    uint64 height = 6;
}

// GetAddressUtxosReplyList is a list of UTXOs
message GetAddressUtxosReplyList {
    repeated GetAddressUtxosReply addressUtxos = 1;
}

// CompactBlock is a compact representation of a block
message CompactBlock {
    uint32 protoVersion = 1;
    uint64 height = 2;
    bytes hash = 3;
    bytes prevHash = 4;
    uint32 time = 5;
    bytes header = 6;
    repeated CompactTx vtx = 7;
}

// CompactTx is a compact representation of a transaction
message CompactTx {
    uint64 index = 1;
    bytes hash = 2;
    uint32 fee = 3;
    repeated CompactSaplingSpend spends = 4;
    repeated CompactSaplingOutput outputs = 5;
    repeated CompactOrchardAction actions = 6;
}

// CompactSaplingSpend is a compact representation of a Sapling spend
message CompactSaplingSpend {
    bytes nf = 1;
}

// CompactSaplingOutput is a compact representation of a Sapling output
message CompactSaplingOutput {
    bytes cmu = 1;
    bytes ephemeralKey = 2;
    bytes ciphertext = 3;
}

// CompactOrchardAction is a compact representation of an Orchard action
message CompactOrchardAction {
    bytes nullifier = 1;
    bytes cmx = 2;
    bytes ephemeralKey = 3;
    bytes ciphertext = 4;
}

// The CompactTxStreamer service provides methods for interacting with lightwalletd
service CompactTxStreamer {
    // Return the height of the tip of the best chain
    rpc GetLatestBlock(ChainSpec) returns (BlockID) {}
    
    // Return the compact block corresponding to the given block identifier
    rpc GetBlock(BlockID) returns (CompactBlock) {}
    
    // Return a list of consecutive compact blocks
    rpc GetBlockRange(BlockRange) returns (stream CompactBlock) {}
    
    // Return the requested full (not compact) transaction
    rpc GetTransaction(TxFilter) returns (RawTransaction) {}
    
    // Submit the given transaction to the Zcash network
    rpc SendTransaction(RawTransaction) returns (SendResponse) {}
    
    // Return information about this lightwalletd instance
    rpc GetLightdInfo(Empty) returns (LightdInfo) {}
    
    // Get UTXOs for a transparent address
    rpc GetAddressUtxos(GetAddressUtxosArg) returns (GetAddressUtxosReplyList) {}
    
    // Get UTXOs for a transparent address as a stream
    rpc GetAddressUtxosStream(GetAddressUtxosArg) returns (stream GetAddressUtxosReply) {}
}

